--- a/index.html
+++ b/index.html
@@ -3,17 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/icon" href="img/ES-TUKUL.png" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@400;500&display=swap" rel="stylesheet" />
+
     <title>ES TUKUL (tuku kul-kul)</title>
   </head>
   <body>
     <nav>
-      <h1>ES TUKUL</h1>
+      <div class="nav-brand">
+        <img class="logo-nav" src="img/ES-TUKUL.png" alt="" />
+        <h1 class="h1-nav">ES TUKUL</h1>
+      </div>
+
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="">Menu</a></li>
         <li><a href="">About US</a></li>
-        <li><a href="">Cart</a></li>
+        <li>
+          <a href=""><img class="cart" src="img/icons8-shopping-cart-50.png" alt="" /></a>
+        </li>
       </ul>
     </nav>
   </body>
