--- a/index.html
+++ b/index.html
@@ -27,5 +27,24 @@
         </li>
       </ul>
     </nav>
+    <div class="div1">
+      <div class="slide">
+        <span id="slide1"></span>
+        <span id="slide2"></span>
+        <span id="slide3"></span>
+
+        <div class="corusel">
+          <img src="img/corusel1.png" alt="" />
+          <img src="img/corusel 2.png" alt="" />
+          <img src="img/corusel 3.png" alt="" />
+        </div>
+      </div>
+
+      <div class="navigation-corusel">
+        <a href="#slide1">1</a>
+        <a href="#slide2">2</a>
+        <a href="#slide3">3</a>
+      </div>
+    </div>
   </body>
 </html>
