--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@
         <span id="slide1"></span>
         <span id="slide2"></span>
         <span id="slide3"></span>
+        <span id="next-Btn"></span>
+        <span id="prev-Btn"></span>
 
         <div class="corusel">
-          <img src="img/corusel1.png" alt="" />
-          <img src="img/corusel 2.png" alt="" />
-          <img src="img/corusel 3.png" alt="" />
+          <img class="img-slide" src="img/corusel1.png" alt="" />
+          <img class="img-slide" src="img/corusel 2.png" alt="" />
+          <img class="img-slide" src="img/corusel 3.png" alt="" />
         </div>
+
+        <!-- carousel button control -->
+        <!-- <div class="btn-carousel">
+          <button id="prevBtn"><a href="#prev-Btn">&#8249;</a></button>
+          <button id="nextBtn"><a href="#next-Btn">&#8250;</a></button>
+        </div> -->
         <!-- button of carousel -->
         <div class="navigation-corusel">
           <a href="#slide1">1</a>
@@ -83,17 +91,17 @@
             </span>
             <span> jajanan ini bukan populer di kalangan anak SD saja tetapi di kalangan dewasa juga sangat menikmatinya. Mengapa hal itu Terjadi??? </span> <br />
             <br />
-            <span> Karena adanya <b>ES TUKUL (tuku kul-kul)</b> yang menyajikan es kul-kul dengan buah segar dan coklat yang manis yang menggoyang lidah kalangan dewabrsa dan anak-anak. </span>
+            <span> Karena adanya <b>ES TUKUL (tuku kul-kul)</b> yang menyajikan es kul-kul dengan buah segar dan coklat yang manis yang menggoyang lidah kalangan dewabrsa dan anak-anak.</span>
             <span>
               ES TUKUL ini di sajikan dengan banyak topping yaitu :
-              <ul>
+              <ul class="p-about">
                 <li>meses</li>
                 <li>springkel</li>
                 <li>oreo</li>
               </ul>
             </span>
             <br />
-            <span> yang membuat anda ingin membelinya.... </span>
+            <span class="p-about"> yang membuat anda ingin membelinya.... </span>
           </p>
         </div>
       </div>
@@ -436,7 +444,7 @@
               <p class="p-a">iss_salavessy</p>
             </a>
           </div>
-          <div class="wa">
+          <div class="wa1">
             <a class="a-contact" href="https://wa.me/+62859111488834?text=Hallo%20benar%20dengan%20tukul" target="_blank"
               ><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
                 <path
@@ -465,7 +473,7 @@
               <p class="p-a">0859111488834</p></a
             >
           </div>
-          <div class="wa">
+          <div class="wa2">
             <a class="a-contact" href="https://wa.me/+6285523697652?text=Hallo%20benar%20dengan%20tukul" target="_blank"
               ><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
                 <path
