--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span id="prev-Btn"></span>
 
         <div class="corusel">
-          <img class="img-slide" src="img/corusel1.png" alt="" />
+          <img class="img-slide" src="img/corusel 1.png" alt="" />
           <img class="img-slide" src="img/corusel 2.png" alt="" />
           <img class="img-slide" src="img/corusel 3.png" alt="" />
         </div>
@@ -133,7 +133,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -156,7 +156,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -179,7 +179,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -202,7 +202,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -225,7 +225,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -248,7 +248,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -271,7 +271,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -294,7 +294,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -317,7 +317,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -340,7 +340,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -363,7 +363,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -386,7 +386,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href=""><button type="button">Buy</button></a>
+            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
       </div>
@@ -534,7 +534,7 @@
         </div>
       </div>
       <div class="footer-section social">
-        <a href="https://wa.me/+6285523697652?text=Hallo%20benar%20dengan%20tukul"
+        <a href="https://wa.me/+6285523697652?text=Hallo%20benar%20dengan%20tukul" target="_blank"
           ><svg class="svg-footer" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256">
             <g
               fill="#ffffff"
@@ -588,7 +588,7 @@
           </svg>
           <p class="p-footer">iss_salavessy <span>|</span></p></a
         >
-        <a href="https://wa.me/+62859111488834?text=Hallo%20benar%20dengan%20tukul"
+        <a href="https://wa.me/+62859111488834?text=Hallo%20benar%20dengan%20tukul" target="_blank"
           ><svg class="svg-footer" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256">
             <g
               fill="#ffffff"
