--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -156,7 +156,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -179,7 +179,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -202,7 +202,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -225,7 +225,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -248,7 +248,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -271,7 +271,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -294,7 +294,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -317,7 +317,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -340,7 +340,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -363,7 +363,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
         <div class="card">
@@ -386,7 +386,7 @@
               <li>Meses</li>
             </ul>
             <h4>IDR = 2K</h4>
-            <a href="https://forms.gle/KY8GgUdAJPqqxNYe6" target="_blank"><button type="button">Buy</button></a>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
       </div>
