--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
         <h1 class="h1-nav">ES TUKUL</h1>
       </div>
 
-      <ul>
-        <li><a class="nav-a" href="#home">Home</a></li>
-        <li><a class="nav-a" href="#about">About US</a></li>
-        <li><a class="nav-a" href="#menu">Menu</a></li>
-        <li><a class="nav-a" href="#contact">Contact US</a></li>
-        <li>
-          <a href=""><img class="cart" src="img/icons8-shopping-cart-50.png" alt="" /></a>
+      <ul class="nav-text">
+        <li id="hamburger-menu" class="nav-hamburger">
+          <a onclick="(e) => e.preventDefault();">
+            <svg class="hamburger-menu" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+              <path d="M 0 9 L 0 11 L 50 11 L 50 9 Z M 0 24 L 0 26 L 50 26 L 50 24 Z M 0 39 L 0 41 L 50 41 L 50 39 Z"></path>
+            </svg>
+          </a>
+        </li>
+
+        <li id="nav-li">
+          <a class="nav-a" href="#home">Home</a>
+          <a class="nav-a" href="#about">About US</a>
+          <a class="nav-a" href="#menu">Menu</a>
+          <a class="nav-a" href="#contact">Contact US</a>
         </li>
       </ul>
     </nav>
@@ -71,7 +78,7 @@
 
     <!-- About US -->
     <div class="About" id="about">
-      <h1 class="h1-about">About</h1>
+      <h1 class="h1-about"><span>About</span></h1>
 
       <div class="container">
         <div class="container-img">
@@ -81,22 +88,22 @@
           <h3 class="about-paragraph">ES TUKUL (Tuku kul-kul)</h3>
           <p class="p-about">
             <span>
-              Es kulkul adalah jajanan es tradisional Indonesia yang telah ada sejak lama. Nama kulkul berasal dari kata kocok atau kukul, yang mengacu pada cara pembuatan es ini. Es kulkul pertama kali diperkenalkan di pasar tradisional
-              dan menjadi sangat populer di kalangan anak-anak sekolah dasar.
+              Es kulkul is a traditional Indonesian iced snack that has been around for a long time. The name kulkul comes from the words shake or kukul, which refers to the way this ice is made. Kulkul ice was first introduced in
+              traditional markets and became very popular among elementary school children.
             </span>
-            <span> jajanan ini bukan populer di kalangan anak SD saja tetapi di kalangan dewasa juga sangat menikmatinya. Mengapa hal itu Terjadi??? </span> <br />
+            <span> This snack is not only popular among elementary school children but adults also really enjoy it. Why did this happen??? </span> <br />
             <br />
-            <span> Karena adanya <b>ES TUKUL (tuku kul-kul)</b> yang menyajikan es kul-kul dengan buah segar dan coklat yang manis yang menggoyang lidah kalangan dewabrsa dan anak-anak.</span>
+            <span>Because of <b>ES TUKUL (tuku kul-kul)</b>which serves kul-kul ice with fresh fruit and sweet chocolate that will tempt the taste buds of adults and children.</span>
             <span>
-              ES TUKUL ini di sajikan dengan banyak topping yaitu :
+              ES TUKUL is served with many toppings, namely:
               <ul class="p-about">
-                <li>meses</li>
-                <li>springkel</li>
+                <li>messes</li>
+                <li>springkle</li>
                 <li>oreo</li>
               </ul>
             </span>
             <br />
-            <span class="p-about"> yang membuat anda ingin membelinya.... </span>
+            <span class="p-about"> that makes you want to buy it.... </span>
           </p>
         </div>
       </div>
@@ -104,7 +111,7 @@
 
     <!-- Menu -->
     <div class="menu" id="menu">
-      <h1 class="h1-menu">Menu</h1>
+      <h1 class="h1-menu"><span>Menu</span></h1>
     </div>
     <div class="container-card-menu">
       <div class="card-place">
@@ -125,7 +132,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>Messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -148,7 +155,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>Messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -171,7 +178,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -194,7 +201,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -217,7 +224,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -240,7 +247,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -263,7 +270,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -286,7 +293,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -309,7 +316,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -332,7 +339,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -355,7 +362,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -378,7 +385,7 @@
             <h3>-- Strawberry --</h3>
             <p>Topping :</p>
             <ul>
-              <li>Meses</li>
+              <li>messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -389,7 +396,7 @@
 
     <!-- contact us -->
     <div class="contactus" id="contact">
-      <h1 class="h1-contact">Contact US</h1>
+      <h1 class="h1-contact"><span>Contact US</span></h1>
       <div class="container">
         <div class="iframe">
           <iframe
