--- a/index.html
+++ b/index.html
@@ -151,8 +151,54 @@
             </div>
           </div>
           <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
+            <img class="img-card" src="img/strowberry2.jpeg" alt="" />
             <h3>-- Strawberry --</h3>
+            <p>Topping :</p>
+            <ul>
+              <li>Springkle</li>
+            </ul>
+            <h4>IDR = 2K</h4>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="tools">
+            <div class="circle">
+              <span class="red box"></span>
+            </div>
+            <div class="circle">
+              <span class="yellow box"></span>
+            </div>
+            <div class="circle">
+              <span class="green box"></span>
+            </div>
+          </div>
+          <div class="card__content">
+            <img class="img-card" src="img/strowberry.jpeg" alt="" />
+            <h3>-- Strawberry --</h3>
+            <p>Topping :</p>
+            <ul>
+              <li>Oreo</li>
+            </ul>
+            <h4>IDR = 2K</h4>
+            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="tools">
+            <div class="circle">
+              <span class="red box"></span>
+            </div>
+            <div class="circle">
+              <span class="yellow box"></span>
+            </div>
+            <div class="circle">
+              <span class="green box"></span>
+            </div>
+          </div>
+          <div class="card__content">
+            <img class="img-card" src="img/pisang.jpeg" alt="" />
+            <h3>-- Pisang --</h3>
             <p>Topping :</p>
             <ul>
               <li>Messes</li>
@@ -174,11 +220,11 @@
             </div>
           </div>
           <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
+            <img class="img-card" src="img/Pisang springkel.jpeg" alt="" />
+            <h3>-- Pisang --</h3>
             <p>Topping :</p>
             <ul>
-              <li>messes</li>
+              <li>Springkle</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -197,11 +243,11 @@
             </div>
           </div>
           <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
+            <img class="img-card" src="img/pisang oreo.jpg" alt="" />
+            <h3>-- Pisang --</h3>
             <p>Topping :</p>
             <ul>
-              <li>messes</li>
+              <li>Oreo</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -220,11 +266,11 @@
             </div>
           </div>
           <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
+            <img class="img-card" src="img/Melon2.jpeg" alt="" />
+            <h3>-- Melon --</h3>
             <p>Topping :</p>
             <ul>
-              <li>messes</li>
+              <li>Messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -243,11 +289,11 @@
             </div>
           </div>
           <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
+            <img class="img-card" src="img/melon.jpeg" alt="" />
+            <h3>-- Melon --</h3>
             <p>Topping :</p>
             <ul>
-              <li>messes</li>
+              <li>Springkle</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -266,11 +312,11 @@
             </div>
           </div>
           <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
+            <img class="img-card" src="img/melon oreo.jpeg" alt="" />
+            <h3>-- Melon --</h3>
             <p>Topping :</p>
             <ul>
-              <li>messes</li>
+              <li>Oreo</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -289,11 +335,11 @@
             </div>
           </div>
           <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
+            <img class="img-card" src="img/pepaya meses.jpg" alt="" />
+            <h3>-- Pepaya --</h3>
             <p>Topping :</p>
             <ul>
-              <li>messes</li>
+              <li>Messes</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -312,11 +358,11 @@
             </div>
           </div>
           <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
+            <img class="img-card" src="img/pepaya springkle.jpg" alt="" />
+            <h3>-- Pepaya --</h3>
             <p>Topping :</p>
             <ul>
-              <li>messes</li>
+              <li>Springkle</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
@@ -335,57 +381,11 @@
             </div>
           </div>
           <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
+            <img class="img-card" src="img/pepaya.jpg" alt="" />
+            <h3>-- Pepaya --</h3>
             <p>Topping :</p>
             <ul>
-              <li>messes</li>
-            </ul>
-            <h4>IDR = 2K</h4>
-            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="tools">
-            <div class="circle">
-              <span class="red box"></span>
-            </div>
-            <div class="circle">
-              <span class="yellow box"></span>
-            </div>
-            <div class="circle">
-              <span class="green box"></span>
-            </div>
-          </div>
-          <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
-            <p>Topping :</p>
-            <ul>
-              <li>messes</li>
-            </ul>
-            <h4>IDR = 2K</h4>
-            <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="tools">
-            <div class="circle">
-              <span class="red box"></span>
-            </div>
-            <div class="circle">
-              <span class="yellow box"></span>
-            </div>
-            <div class="circle">
-              <span class="green box"></span>
-            </div>
-          </div>
-          <div class="card__content">
-            <img class="img-card" src="img/strawberry 2.jpg" alt="" />
-            <h3>-- Strawberry --</h3>
-            <p>Topping :</p>
-            <ul>
-              <li>messes</li>
+              <li>Oreo</li>
             </ul>
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
