--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </ul>
             </span>
             <br />
-            <span class="p-about"> that makes you want to buy it.... </span>
+            <span class="p-about"> that makes you want to buy it... </span>
           </p>
         </div>
       </div>
