--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p class="text-buy">click the buy button to show menu</p>
       </div>
       <div class="btn-offer">
-        <a href="https://wa.me/+62859111488834"><button class="offer-buy" type="button">BUY</button></a>
+        <a href="#menu"><button class="offer-buy" type="button">BUY</button></a>
       </div>
     </div>
 
