--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
-        <div class="card">
+        <!-- <div class="card">
           <div class="tools">
             <div class="circle">
               <span class="red box"></span>
@@ -390,7 +390,7 @@
             <h4>IDR = 2K</h4>
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
