--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <a href="https://whatsform.com/mOYHZT" target="_blank"><button type="button">Buy</button></a>
           </div>
         </div>
-        <!-- <div class="card">
+        <div class="card">
           <div class="tools">
             <div class="circle">
               <span class="red box"></span>
